# dex-lang

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .hlint.yaml  .travis.yml  Actor.hs  BMap.hs  Builtins.hs  CITATION.cff  CONTRIBUTING.md  Cat.hs  ChangeLog.md  ColInterpreter.hs  ConcurrentUtil.hs  Dag.hs  DeFunc.hs  DeShadow.hs  Env.hs  FlatType.hs  Flops.hs  Fresh.hs  IOSql.hs  Imp.hs  Imperative.hs  Inference.hs  Interpreter.hs  JIT.hs  LICENSE  LLVMExec.hs  Lower.hs  NExpr.hs  Normalize.hs  PPrint.hs  ParseUtil.hs  Parser.hs  Pass.hs  README.md  Record.hs  Syntax.hs  TCSV.hs  (+86 more)
.github/workflows/: bench-on-demand.yaml  bench.yaml  ci.yaml  docs.yaml  haskell-ci.yaml  haskell.yml  julia-ci.yaml  python-ci.yaml
.nix/: compiler.nix  nixpkgs.nix  pinned-nixpkgs.nix
app/: Main.hs
benchmarks/: bfgs.py  cbench.c  continuous.py  conv.dx  conv_py.py  dexbench.py  fused_sum.dx  gaussian.dx  jvp_matmul.dx  matmul.dx  matmul.py  matmul_big.dx  matmul_small.dx  matvec_big.dx  matvec_small.dx  microbench.dx  numpy-bench.py  pointwise.dx  pointwise.py  poly.dx  prepare-executables.py  time-tests.cd  time-tests.dx  util.py  vjp_matmul.dx
benchmarks/parboil/: histogram.dx  mriq.dx  stencil.dx
benchmarks/python/: microbench.py  raytrace.py
benchmarks/queries/: init.sql  result-summary.sql
benchmarks/rodinia/: README.md  backprop-ad.dx  backprop.dx  backpropad.dx  hotspot.dx  kmeans.dx  pathfinder.dx  prepare-executables.py  rodinia
cbits/: libcod.c  libdex.c
design-decisions/: human-readable-serialization.md  index-type-options.hs
doc/: coddle.tex  conditionals.dx  dex.tex  functions.dx  syntax-philosophy.md
examples/: ad-tests-interp.dx  ad-tests.dx  adt-tests.dx  alignment.dx  annot-tests.dx  arithmetic-coding.dx  aspirational.dx  bad-binary-file.dxbo  bfgs.dx  bfgs.html  bfgs.json  brownian_motion.dx  brownian_motion.html  brownian_motion.json  bugs.dx  caustics.dx  chol.dx  chol.html  cky.dx  clustering.dx  cmn  complex-tests.dx  complex.dx  ctc.dx  ctc.html  ctc.json  data-frames.dx  diagram.dx  dither.dx  dither.html  dither.json  dxbo-example.dxbo  easy-ad-tests.dx  eval-tests.dx  fft.dx  fft.html  flop-tests.dx  fluidsim.dx  fluidsim.html  fluidsim.json  (+129 more)
examples/NeuralNetwork/: Manifest.toml  Project.toml  create_data.jl  neural_network.dx
examples/export/: array.cpp  array.dx  scalar.cpp  scalar.dx
julia/: Project.toml  README.md
julia/src/: DexCall.jl  api.jl  api_types.jl  chainrules.jl  evaluate.jl  native_function.jl
julia/test/: api.jl  chainrules.jl  evaluate.jl  native_function.jl  runtests.jl
latex/: coddle.tex
lib/: complex.dx  complex.html  complex.json  diagram.dx  diagram.html  diagram.json  fft.dx  fft.html  fft.json  image.dx  io.dx  linalg.dx  linalg.html  linalg.json  linearmaps.dx  netpbm.dx  netpbm.html  netpbm.json  parser.dx  parser.html  parser.json  plot.dx  plot.html  plot.json  png.dx  png.html  png.json  prelude.dx  prelude.html  set.dx  set.html  set.json  sort.dx  sort.html  sort.json  stats.dx  stats.html  stats.json  table_print.dx  test_module_A.dx  (+2 more)
misc/: build-web-index  check-no-diff  check-quine  coddle.el  dex-completion.bash  dex.el  file-check  inlining-cases.cod  test-cod2jax.py
misc/py/: coddle.py  dex.py  dex_binary_object.py  foo.dx  generate-dex-data.py  jax_call.py  mnist_to_dxbo.py  test-cod2jax.py  test-dex2jax.py
python/: example.py  setup.py
python/dex/: __init__.py  api.py  native_function.py
python/dex/interop/: jax.py  jax2dex.py
python/tests/: api_test.py  api_tests.py  dexjit_test.py  jax_test.py  jaxpr_json_test.py  jit_test.py
queries/: compare-versions.sql
quine-tests/: annot-tests.cd  bugs.cd  check-quine  eval-tests.cd  eval-tests.dx  flop-tests.cd  interp-tests.cd  shadow-tests.cd  shadow-tests.dx  tutorial.cod  tutorial.dx  type-tests.cd  type-tests.dx
src/: Lib.hs  LibEv.hs  LibEv2.hs  LibMonadic.hs  LinearA.hs  LinearB.hs  MonadWithParallelTraverse.hs  Table.hs  TableEffects.hs  TableEffectsExamples.hs  TableEffectsSimplerHandlers.hs  TableEffectsStateAsFunctor.hs  coddle.hs  dex.hs
src/Dex/Foreign/: API.hs  Context.hs  JAX.hs  JIT.hs  Serialize.hs  Util.hs  rts.c
src/ffi/: Cod2Jax.hs  Dex2Jax.hs
src/foreign/: API.hs  rts.c
src/lib/: AbstractSyntax.hs  Actor.hs  Algebra.hs  Array.hs  Autodiff.hs  Base.hs  Bridge.hs  Builder.hs  CUDA.hs  Cat.hs  CheapReduction.hs  CheckType.hs  Cod2Jax.hs  ConcreteSyntax.hs  Core.hs  CoreTraversal.hs  DPS.hs  DeFunc.hs  DeShadow.hs  Embed.hs  Env.hs  Err.hs  Expand.hs  Export.hs  Flops.hs  Fresh.hs  Generalize.hs  GenericTraversal.hs  HigherKinded.hs  IRVariants.hs  Imp.hs  ImpToLLVM.hs  IncState.hs  Inference.hs  Inference.hs-boot  Inline.hs  Interpreter.hs  Interpreter.hs-boot  JAX.hs  JIT.hs  (+60 more)
src/lib/Futhark/: IR.hs
src/lib/Imp/: Builder.hs  Embed.hs  Optimize.hs
src/lib/JAX/: Concrete.hs  Rename.hs  ToSimp.hs
src/lib/LLVM/: CUDA.hs  Compile.hs  JIT.hs  Link.hs  Shims.hs
src/old/: Export.hs
src/resources/: Resources.hs
src/test/: Generators.hs  PropTests.hs
static/: dynamic.html  dynamic.js  index.html  index.js  index.ts  plot.js  static-onload.js  style.css
test/: LinearASpec.hs  LinearBSpec.hs
tests/: GenExpr.hs  Generators.hs  PropTests.hs  TestPass.hs  actor-test.hs  ad-tests-interp.dx  ad-tests.cd  ad-tests.dx  adt-tests.dx  algeff-tests.dx  annot-tests.cd  cast-tests.dx  complex-tests.dx  deriving-instance-tests.dx  deriving-instance.dx  eval-tests.cd  eval-tests.dx  eval-tests.expected  examples.cd  exception-tests.dx  fft-tests.dx  flop-tests.cd  gpu-tests.dx  include-test.dx  inline-tests.dx  instance-interface-syntax-tests.dx  instance-methods-test.dx  instance-methods-tests.dx  instance-mutually-recursive-methods-test.dx  interp-tests.dx  io-tests.dx  jax-tests.dx  linalg-tests.dx  linearmap-tests.dx  lower.dx  module-tests.dx  monad-tests.dx  mymap.dx  opt-tests.dx  parser-combinator-tests.dx  (+32 more)
tests/unit/: ConstantCastingSpec.hs  JaxADTSpec.hs  OccAnalysisSpec.hs  OccurrenceSpec.hs  RawNameSpec.hs  SourceInfoSpec.hs
tool/: rename.py
tooling/syntax/: dex.iro  dex.plist  dex.tmLanguage.json
(+46 files in other folders)
