name:                coddle
version:             0.1.0.0
author:              Dougal Maclaurin
maintainer:          dougalm@google.com
build-type:          Simple
cabal-version:       >=1.10

executable coddle
  main-is:             coddle.hs
  other-modules:       Record, Env, Syntax, Type, Inference, JIT, LLVMExec,
                       DeFunc, ParseUtil, Parser, Util, Imp, PPrint, Fresh, Pass,
                       ConcurrentUtil
  other-extensions:    OverloadedStrings
  build-depends:       base, containers, mtl, QuickCheck, binary, bytestring, HUnit,
                       time, tf-random, llvm-hs-pure ==6.*, llvm-hs ==6.*,
                       hinotify, aeson, megaparsec, warp, optparse-applicative,
                       wai, parser-combinators, http-types, prettyprinter, text,
                       haskeline, data-binary-ieee754

  default-language:    Haskell2010

  -- this is clearly a hack. Can't figure out where else to put it
  ghc-options:         cbits/libcod.so
