cabal-version:       2.0
name:                coddle
version:             0.1.0.0
author:              Dougal Maclaurin
maintainer:          dougalm@google.com
build-type:          Simple

library
  exposed-modules:     Record, Env, Syntax, Type, Inference, JIT, LLVMExec,
                       ParseUtil, Parser, Util, Imp, PPrint, Fresh, Pass,
                       WebOutput, Actor, DeShadow, Cat, Flops, Normalize,
                       Interpreter
  build-depends:       base, containers, mtl, binary, bytestring,
                       time, tf-random, llvm-hs-pure ==7.*, llvm-hs ==7.*,
                       hinotify, aeson, megaparsec, warp, wai,
                       parser-combinators, http-types, prettyprinter, text,
                       data-binary-ieee754
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  ghc-options:         cbits/libcod.so
                       -Wall
                       -O0

executable coddle
  main-is:             coddle.hs
  other-extensions:    OverloadedStrings
  build-depends:       coddle, base, haskeline, prettyprinter, mtl,
                       optparse-applicative
  default-language:    Haskell2010
  hs-source-dirs:      src
  -- this is clearly a hack. Can't figure out where else to put it
  ghc-options:         cbits/libcod.so
                       -threaded
                       -Wall

Test-Suite test-coddle
  type:                exitcode-stdio-1.0
  main-is:             PropTests.hs
  build-depends:       coddle, base, QuickCheck >= 2.12.1, prettyprinter, containers
  other-modules:       Generators
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         cbits/libcod.so
                       -Wall
