cabal-version:       2.0
name:                coddle
version:             0.1.0.0
author:              Dougal Maclaurin
maintainer:          dougalm@google.com
build-type:          Simple

flag web
  description:         Enables the web interface
  default:             False

library
  exposed-modules:     Record, Env, Syntax, Type, Inference, JIT, LLVMExec,
                       ParseUtil, Parser, Util, Imp, PPrint, Fresh, Pass,
                       Actor, DeShadow, Cat, Flops, Normalize,
                       Interpreter, RenderHtml
  build-depends:       base, containers, mtl, binary, bytestring,
                       time, tf-random, llvm-hs-pure ==7.*, llvm-hs ==7.*,
                       aeson, megaparsec, warp, wai,
                       parser-combinators, http-types, prettyprinter, text,
                       data-binary-ieee754, blaze-html
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  ghc-options:         cbits/libcod.so
                       -Wall
                       -O0
  if flag(web)
    exposed-modules:   WebOutput
    build-depends: hinotify

executable coddle
  main-is:             coddle.hs
  other-extensions:    OverloadedStrings
  build-depends:       coddle, base, haskeline, prettyprinter, mtl,
                       optparse-applicative
  default-language:    Haskell2010
  hs-source-dirs:      src
  -- this is clearly a hack. Can't figure out where else to put it
  ghc-options:         cbits/libcod.so
                       -threaded
                       -Wall
  default-extensions:  CPP
  if flag(web)
    cpp-options:         -DCODDLE_WEB

Test-Suite test-coddle
  type:                exitcode-stdio-1.0
  main-is:             PropTests.hs
  build-depends:       coddle, base, QuickCheck >= 2.12.1, prettyprinter, containers
  other-modules:       Generators
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         cbits/libcod.so
                       -Wall

-- executable cod2jax.so
--   main-is:             Cod2Jax.hs
--   build-depends:       coddle, base, aeson, bytestring, mtl
--   ghc-options:         -no-hs-main -fPIC -shared -dynamic
--   hs-source-dirs:      src/ffi
--   extra-libraries:     HSrts-ghc8.6.5
--   ghc-options:         -Wall
