cabal-version:       2.2

-- Copyright 2019 Google LLC
--
-- Use of this source code is governed by a BSD-style
-- license that can be found in the LICENSE file or at
-- https://developers.google.com/open-source/licenses/bsd

name:                dex
version:             0.1.0.0
author:              Dougal Maclaurin
maintainer:          dougalm@google.com
license-file:        LICENSE
build-type:          Simple

data-files:          lib/*.dx
                   , static/*.css
                   , static/*.html
                   , static/*.js
                   , src/lib/dexrt.bc

flag cuda
  description:         Enables building with CUDA support
  default:             False

flag optimized
  description:         Enables GHC optimizations
  default:             False

flag live
  description:         Enables live-editing environments (web notebook and terminal)
  default:             True

flag llvm-head
  description:         Use the bleeding-edge version of LLVM
  default:             False

flag foreign
  description:         Build the C interface to Dex
  default:             False

flag debug
  description:         Enable extra checks and stack trace printing (useful for developers)
  default:             False

library
  exposed-modules:     Algebra
                     , Builder
                     , CUDA
                     , Cat
                     , CheapReduction
                     , CheckType
                     , Core
                     , Err
                     , Export
                     , GenericTraversal
                     , Imp
                     , Inference
                     , Interpreter
                     , JIT
                     , LLVM.HEAD.JIT
                     , LLVM.JIT
                     , LLVM.Shims
                     , LLVMExec
                     , LabeledItems
                     , Linearize
                     , Logging
                     , Lower
                     , MTL1
                     , Name
                     , Optimize
                     , PPrint
                     , Parser
                     , RawName
                     , Serialize
                     , Simplify
                     , SourceRename
                     , Syntax
                     , TopLevel
                     , Transpose
                     , Types.Core
                     , Types.Imp
                     , Types.Primitives
                     , Types.Source
                     , QueryType
                     , Util
  if flag(live)
    exposed-modules:   Actor
                     , Live.Eval
                     , Live.Terminal
                     , Live.Web
                     , RenderHtml
  other-modules:       Paths_dex
  build-depends:       base
                     , bytestring
                     , containers
                     , cryptonite
                     , exceptions
                     , hashable
                     , llvm-hs
                     , llvm-hs-pure
                     , mtl
                     , scientific
                     , transformers
                     , unordered-containers
                     , utf8-string
                       -- Parsing
                     , megaparsec
                     , parser-combinators
                       -- Text output
                     , prettyprinter
                     , text
                       -- Portable system utilities
                     , ansi-terminal
                     , directory
                     , filepath
                     , haskeline
                     , process
                     , temporary
                       -- Serialization
                     , aeson
                     , store
  if flag(live)
    build-depends:     binary
                     , blaze-html
                     , cmark
                     , http-types
                     , wai
                     , warp
    cpp-options:       -DDEX_LIVE
    cxx-options:       -DDEX_LIVE
  if flag(debug)
    cpp-options:       -DDEX_DEBUG
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -fPIC
                       -optP-Wno-nonportable-include-path
  cxx-sources:         src/lib/dexrt.cpp
  cxx-options:         -std=c++11 -fPIC
                       -- Mimicking -XGHC2021 in GHC 8.10.1
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , ConstrainedClassMethods
                     , ConstraintKinds
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DoAndIfThenElse
                     , EmptyCase
                     , EmptyDataDecls
                     , EmptyDataDeriving
                     , ExistentialQuantification
                     , ExplicitForAll
                     -- FieldSelectors was introduced in GHC 9.2
                     , FlexibleContexts
                     , FlexibleInstances
                     , ForeignFunctionInterface
                     , GADTSyntax
                     , GeneralisedNewtypeDeriving
                     , HexFloatLiterals
                     , ImplicitPrelude
                     , ImportQualifiedPost
                     , InstanceSigs
                     , KindSignatures
                     , MonomorphismRestriction
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NamedWildCards
                     , NumericUnderscores
                     , PatternGuards
                     , PolyKinds
                     , PostfixOperators
                     , RankNTypes
                     , RelaxedPolyRec
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , StandaloneKindSignatures
                     , StarIsType
                     , TraditionalRecordSyntax
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeSynonymInstances
                     -- Other extensions
                     , BlockArguments
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DerivingVia
                     , FunctionalDependencies
                     , GADTs
                     , LambdaCase
                     , OverloadedStrings
                     , PatternSynonyms
                     , QuantifiedConstraints
                     , RecordWildCards
                     , TypeFamilies
                     , ViewPatterns

  pkgconfig-depends:   libpng
  if flag(cuda)
    include-dirs:      /usr/local/cuda/include
    extra-libraries:   cuda
    cxx-options:       -DDEX_CUDA
    cpp-options:       -DDEX_CUDA
  if flag(optimized)
    ghc-options:       -O3
  else
    ghc-options:       -O0

executable dex
  main-is:             dex.hs
  build-depends:       dex
                     , ansi-wl-pprint
                     , base
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , haskeline
                     , mtl
                     , optparse-applicative
                     , prettyprinter
                     , store
                     , text
                     , unix
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -threaded
                       -optP-Wno-nonportable-include-path
                       -rtsopts
                       "-with-rtsopts=-I0 -A16m"
  default-extensions:  CPP
                     , DeriveGeneric
                     , LambdaCase
                     , OverloadedStrings
                     , BlockArguments
  if flag(cuda)
    cpp-options:       -DDEX_CUDA
  if flag(live)
    cpp-options:       -DDEX_LIVE
  if flag(optimized)
    ghc-options:       -O3
  else
    ghc-options:       -O0

foreign-library Dex
  if flag(foreign)
    buildable: True
  else
    buildable: False
  type:                native-shared
  other-modules:       Dex.Foreign.API
                     , Dex.Foreign.Context
                     , Dex.Foreign.JIT
                     , Dex.Foreign.Serialize
                     , Dex.Foreign.Util
  build-depends:       dex
                     , base
                     , bytestring
                     , containers
                     , llvm-hs
                     , mtl
                     , random
                     , text
  hs-source-dirs:      src/
  c-sources:           src/Dex/Foreign/rts.c
  cc-options:          -std=c11 -fPIC
  ghc-options:         -Wall
                       -fPIC
                       -optP-Wno-nonportable-include-path
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , DataKinds
                     , FlexibleInstances
                     , GADTs
                     , LambdaCase
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , ImportQualifiedPost
                     , TypeApplications
  if flag(optimized)
    ghc-options:       -O3
  else
    ghc-options:       -O0

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      tests/unit
  ghc-options:         -Wall
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , dex
  other-modules:       RawNameSpec
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover
                       -- Mimicking -XGHC2021 in GHC 8.10.1
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , ConstrainedClassMethods
                     , ConstraintKinds
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DoAndIfThenElse
                     , EmptyCase
                     , EmptyDataDecls
                     , EmptyDataDeriving
                     , ExistentialQuantification
                     , ExplicitForAll
                     -- FieldSelectors was introduced in GHC 9.2
                     , FlexibleContexts
                     , FlexibleInstances
                     , ForeignFunctionInterface
                     , GADTSyntax
                     , GeneralisedNewtypeDeriving
                     , HexFloatLiterals
                     , ImplicitPrelude
                     , ImportQualifiedPost
                     , InstanceSigs
                     , KindSignatures
                     , MonomorphismRestriction
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NamedWildCards
                     , NumericUnderscores
                     , PatternGuards
                     , PolyKinds
                     , PostfixOperators
                     , RankNTypes
                     , RelaxedPolyRec
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , StandaloneKindSignatures
                     , StarIsType
                     , TraditionalRecordSyntax
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeSynonymInstances
                     -- Other extensions
                     , BlockArguments
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DerivingVia
                     , FunctionalDependencies
                     , GADTs
                     , LambdaCase
                     , OverloadedStrings
                     , PatternSynonyms
                     , QuantifiedConstraints
                     , RecordWildCards
                     , TypeFamilies
                     , ViewPatterns

