cabal-version:       2.2

-- Copyright 2019 Google LLC
--
-- Use of this source code is governed by a BSD-style
-- license that can be found in the LICENSE file or at
-- https://developers.google.com/open-source/licenses/bsd

name:                dex
version:             0.1.0.0
author:              Dougal Maclaurin
maintainer:          dougalm@google.com
license-file:        LICENSE
build-type:          Simple

data-files:          lib/*.dx
                   , static/dynamic.html
                   , static/index.js
                   , static/style.css
                   , src/lib/dexrt.bc

flag cuda
  description:         Enables building with CUDA support
  default:             False

flag optimized
  description:         Enables GHC optimizations
  default:             False

flag llvm-head
  description:         Use the bleeding-edge version of LLVM
  default:             False

flag foreign
  description:         Build the C interface to Dex
  default:             False

flag debug
  description:         Enable extra checks and stack trace printing (useful for developers)
  default:             False

library
  exposed-modules:     AbstractSyntax
                     , Algebra
                     , Builder
                     , CUDA
                     , CheapReduction
                     , CheckType
                     , ConcreteSyntax
                     , Core
                     , Err
                     , Export
                     , Generalize
                     , Imp
                     , ImpToLLVM
                     , IncState
                     , Inference
                     , Inline
                     , IRVariants
                     , JAX.Concrete
                     , JAX.Rename
                     , JAX.ToSimp
                     , LLVM.Link
                     , LLVM.Compile
                     , LLVM.CUDA
                     , LLVM.Shims
                     , Lexing
                     , Linearize
                     , Lower
                     , MonadUtil
                     , MTL1
                     , Name
                     , Occurrence
                     , OccAnalysis
                     , Optimize
                     , PeepholeOptimize
                     , PPrint
                     , RawName
                     , Runtime
                     , RuntimePrint
                     , Serialize
                     , Simplify
                     , Subst
                     , SourceRename
                     , SourceIdTraversal
                     , TopLevel
                     , Transpose
                     , Types.Core
                     , Types.Imp
                     , Types.Primitives
                     , Types.OpNames
                     , Types.Source
                     , Types.Top
                     , QueryType
                     , QueryTypePure
                     , Util
                     , Vectorize
                     , Actor
                     , Live.Eval
                     , Live.Web
                     , RenderHtml
  other-modules:       Paths_dex
  build-depends:       base
                     , bytestring
                     , containers
                     , cryptonite
                     , exceptions
                     , hashable
                     , llvm-hs
                     , llvm-hs-pure
                     , mtl
                     , scientific
                     , transformers
                     , unordered-containers
                     , utf8-string
                       -- Parsing
                     , megaparsec
                     , parser-combinators
                       -- Text output
                     , prettyprinter
                     , text
                       -- Portable system utilities
                     , directory
                     , filepath
                     , haskeline
                     , process
                     , temporary
                       -- Serialization
                     , aeson
                     , store
                     , time
                       -- Floating-point pedanticness (correcting for GHC < 9.2.2)
                     , floating-bits
                     , binary
                     , blaze-html
                     , blaze-markup
                     , cmark
                     , http-types
                     , wai
                     , warp
  if flag(debug)
    cpp-options:       -DDEX_DEBUG
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -fPIC
                       -optP-Wno-nonportable-include-path
  cxx-sources:         src/lib/dexrt.cpp
  cxx-options:         -std=c++11 -fPIC
                       -- Mimicking -XGHC2021 in GHC 8.10.1
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , ConstrainedClassMethods
                     , ConstraintKinds
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DoAndIfThenElse
                     , EmptyCase
                     , EmptyDataDecls
                     , EmptyDataDeriving
                     , ExistentialQuantification
                     , ExplicitForAll
                     -- FieldSelectors was introduced in GHC 9.2
                     , FlexibleContexts
                     , FlexibleInstances
                     , ForeignFunctionInterface
                     , GADTSyntax
                     , GeneralisedNewtypeDeriving
                     , HexFloatLiterals
                     , ImplicitPrelude
                     , ImportQualifiedPost
                     , InstanceSigs
                     , KindSignatures
                     , MonomorphismRestriction
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NamedWildCards
                     , NumericUnderscores
                     , PatternGuards
                     , PolyKinds
                     , PostfixOperators
                     , RankNTypes
                     , RelaxedPolyRec
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , StandaloneKindSignatures
                     , StarIsType
                     , TraditionalRecordSyntax
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeSynonymInstances
                     -- Other extensions
                     , BlockArguments
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DerivingVia
                     , FunctionalDependencies
                     , GADTs
                     , LambdaCase
                     , OverloadedStrings
                     , PatternSynonyms
                     , QuantifiedConstraints
                     , RecordWildCards
                     , TypeFamilies
                     , ViewPatterns

  pkgconfig-depends:   libpng
  if flag(cuda)
    include-dirs:      /usr/local/cuda/include
    extra-libraries:   cuda
    cxx-options:       -DDEX_CUDA
    cpp-options:       -DDEX_CUDA
  if flag(optimized)
    ghc-options:       -O3
  else
    ghc-options:       -O0

executable dex
  main-is:             dex.hs
  build-depends:       dex
                     , ansi-wl-pprint
                     , ansi-terminal
                     , base
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , haskeline
                     , mtl
                     , optparse-applicative
                     , prettyprinter
                     , store
                     , text
                     , unix
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -threaded
                       -optP-Wno-nonportable-include-path
                       -rtsopts
                       -Wall
                       "-with-rtsopts=-I0 -A16m"
  default-extensions:  CPP
                     , DeriveGeneric
                     , LambdaCase
                     , OverloadedStrings
                     , BlockArguments
  if flag(cuda)
    cpp-options:       -DDEX_CUDA
  if flag(optimized)
    ghc-options:       -O3
  else
    ghc-options:       -O0

foreign-library Dex
  if flag(foreign)
    buildable: True
  else
    buildable: False
  type:                native-shared
  other-modules:       Dex.Foreign.API
                     , Dex.Foreign.Context
                     , Dex.Foreign.JAX
                     , Dex.Foreign.JIT
                     , Dex.Foreign.Serialize
                     , Dex.Foreign.Util
  build-depends:       dex
                     , aeson
                     , base
                     , bytestring
                     , containers
                     , llvm-hs
                     , mtl
                     , random
                     , text
  hs-source-dirs:      src/
  c-sources:           src/Dex/Foreign/rts.c
  cc-options:          -std=c11 -fPIC
  ghc-options:         -Wall
                       -fPIC
                       -optP-Wno-nonportable-include-path
                       -Wno-unticked-promoted-constructors
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , DataKinds
                     , FlexibleInstances
                     , GADTs
                     , LambdaCase
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , ImportQualifiedPost
                     , TypeApplications
  if flag(optimized)
    ghc-options:       -O3
  else
    ghc-options:       -O0

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      tests/unit
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
  build-depends:       base
                     , containers
                     , hspec
                     , mtl
                     , QuickCheck
                     , text
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , blaze-html
                     , dex
  other-modules:       ConstantCastingSpec
                     , JaxADTSpec
                     , OccAnalysisSpec
                     , OccurrenceSpec
                     , RawNameSpec
                     , SourceInfoSpec
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover
                       -- Mimicking -XGHC2021 in GHC 8.10.1
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , ConstrainedClassMethods
                     , ConstraintKinds
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DoAndIfThenElse
                     , EmptyCase
                     , EmptyDataDecls
                     , EmptyDataDeriving
                     , ExistentialQuantification
                     , ExplicitForAll
                     -- FieldSelectors was introduced in GHC 9.2
                     , FlexibleContexts
                     , FlexibleInstances
                     , ForeignFunctionInterface
                     , GADTSyntax
                     , GeneralisedNewtypeDeriving
                     , HexFloatLiterals
                     , ImplicitPrelude
                     , ImportQualifiedPost
                     , InstanceSigs
                     , KindSignatures
                     , MonomorphismRestriction
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NamedWildCards
                     , NumericUnderscores
                     , PatternGuards
                     , PolyKinds
                     , PostfixOperators
                     , RankNTypes
                     , RelaxedPolyRec
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , StandaloneKindSignatures
                     , StarIsType
                     , TraditionalRecordSyntax
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeSynonymInstances
                     -- Other extensions
                     , BlockArguments
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DerivingVia
                     , FunctionalDependencies
                     , GADTs
                     , LambdaCase
                     , OverloadedStrings
                     , PatternSynonyms
                     , QuantifiedConstraints
                     , RecordWildCards
                     , TypeFamilies
                     , ViewPatterns

