cabal-version:      2.4
name:               lollipops
version:            0.1.0.0
author:             Adam Paszke
maintainer:         apaszke@google.com

library
    exposed-modules:  LinearA
    build-depends:    base ^>=4.14.2.0, containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: LinearASpec
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , lollipops
    , containers
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
